deployement-maxam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxam-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: maxam-app
  template:
    metadata:
      labels:
        app: maxam-app
    spec:
      containers:
      - name: maxam-app
        image: razoropsrepocode/maxam:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
         limits:
           cpu: 500m
         requests:
           cpu: 200m
      imagePullSecrets:
      - name: regcred
