fullservicefiles.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxam-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: maxam-app
  template:
    metadata:
      labels:
        app: maxam-app
    spec:
      containers:
      - name: maxam-app
        image: registry.digitalocean.com/maxamrazo/maxamrazo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
         limits:
           cpu: 500m
         requests:
           cpu: 200m
      imagePullSecrets:
      - name: do-registry 
        
---
  apiVersion: v1
  kind: Service
  metadata:
    name: maxam-deployment
  spec:
    type: NodePort
    ports:
    - port: 80
      targetPort: 80
    selector:
      app: maxam-app
---
apiVersion: v1
kind: Service
metadata:
  name: maxam-mysql
  labels:
    app: maxam-app
spec:
  ports:
    - port: 3306
  selector:
    app: maxam-app
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maxam-mysql
  labels:
    app: maxam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maxam-app
      tier: mysql
  #strategy:
   # type: Recreate
  template:
    metadata:
      labels:
        app: maxam-app
        tier: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: maxam-app
        ports:
        - containerPort: 3306
          name: maxam-mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
