ingress-maxam.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maxam-deployment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: maxam123razo.com # like example its not original
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: maxam-deployment
            port:
              number: 80
